--- a/employee-directory/src/styles/Header.css
+++ b/employee-directory/src/styles/Header.css
@@ -1,9 +1,9 @@
 .header {
     padding: 30px 0;
-    color: #ffffff;
-    background-color: #101D42;
+    color: #5B0E2D;
+    background-color: #FFA781;
     width: 100%;
     text-align: center;
-    border-bottom: 5px solid #DB162F;
+    border-bottom: 5px solid #5B0E2D;
     margin-bottom: 10px;
 }
